# aes-differential-fault-analysis

./: MANIFEST.in  README.rst  setup.cfg  tox.ini
aes_dfa/: attack.py  common.py  first_step.py  key_expension.py  second_step.py
tests/unit/: test_first_step.py  test_key_expension.py  test_second_step.py
